# paytochat

./: .env.example  .firebaserc  .gitignore  DEPLOYMENT.md  LICENSE  README.md  SOLANA.md  firestore.indexes.json  firestore.rules  next.config.mjs  package.json  pnpm-lock.yaml  storage.rules  tailwind.config.ts  tsconfig.json
contracts/: .env.example  .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/scripts/: deploy-with-keystore.sh  deploy.ts  export-abi.ts  generate-keystore.ts  keystore-check.sh  keystore-new.sh
contracts/src/: PayToChatEscrow.sol
contracts/src/test-mocks/: MaliciousReenterer.sol  MockERC20.sol  MockFeeOnTransfer.sol  MockUSDTLike.sol
contracts/test/: PayToChatEscrow.test.ts
scripts/: backfill-message-participants.ts
solana/: Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
solana/programs/paytochat-escrow/: Cargo.toml
solana/programs/paytochat-escrow/src/: lib.rs
solana/scripts/: _lib.ts  export-idl.ts  initialize.ts  set-token-allowed.ts
solana/tests/: paytochat-escrow.ts
src/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  manifest.ts  page.tsx  providers.tsx  robots.ts  sitemap.ts
src/app/[handle]/: page.tsx  send-form.tsx
src/app/icon-512/: route.tsx
src/components/: analytics-tracker.tsx  escrow-actions.tsx  logo.tsx  message-list.tsx  nav.tsx  rich-content.tsx  rich-editor.tsx  thread-composer.tsx  tip-reveal-confetti.tsx  token-section.tsx  ui.tsx
src/lib/: auth-context.tsx  rich-text.server.ts  rich-text.ts  types.ts  utils.ts
(+27 files in other folders)
